# meaningful_metrics

./: .pre-commit-config.yaml  404.html  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SPEC.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: new_artifact_proposal.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/: index.html
api/metrics/: index.html
api/schemas/: index.html
api/scoring/: index.html
architecture/: index.html
case-studies/chatgpt-goal-alignment/: index.html
community/: README.md  adoption_stories.md  changelog.md  feedback_log.md  meeting_notes.md
concepts/: index.html
concepts/actionability/: index.html
concepts/goal-alignment/: index.html
concepts/quality-time-score/: index.html
data/: README.md
decisions/001-pydantic-for-schemas/: index.html
decisions/002-pure-functions-for-metrics/: index.html
docs/: README.md  architecture.md  concepts.md  eval_template.md  index.md  metric_template.md  model_card.md  quickstart.md
docs/api/: README.md  index.md  metrics.md  schemas.md  scoring.md
docs/case-studies/: chatgpt-goal-alignment.md
docs/concepts/: actionability.md  goal-alignment.md  quality-time-score.md
docs/decisions/: 001-pydantic-for-schemas.md  002-pure-functions-for-metrics.md
docs/examples/: basic_usage.md
docs/toolkit/: README.md  accessibility_debt_register.csv  decision_log_template.md  fairness_audit_checklist.md  participant_survey_template.md
eval_template/: index.html
evals/examples/: civic_outreach_accountability_board.md  impact_equity_monitor.md  inclusive_assistive_review.md  sustainable_automation_scorecard.md  trust_centered_deployment_review.md
examples/basic_usage/: index.html
metric_template/: index.html
metrics/examples/: accessibility_success_pathways.md  actionable_recommendation_rate.md  civic_participation_depth.md  engaged_learning_time.md
model_card/: index.html
notebooks/: quickstart.ipynb
quickstart/: index.html
results/: generate_figures.py  metrics.json
results/case-studies/: chatgpt-goal-alignment.md  run_chatgpt_study.py
search/: search_index.json
src/meaningful_metrics/: __init__.py  metrics.py  schemas.py  scoring.py
tests/: __init__.py  test_metrics.py  test_schemas.py  test_scoring.py
tooling/: README.md
tooling/evals/civic_outreach_accountability_board/: README.md  civic_outreach_bias_audit.sql
tooling/evals/inclusive_assistive_review/: README.md
tooling/metrics/accessibility_success_pathways/: README.md  accessibility_pathway_fairness_template.csv
tooling/metrics/actionable_recommendation_rate/: README.md
tooling/metrics/civic_participation_depth/: README.md
tooling/metrics/engaged_learning_time/: README.md
toolkit/: index.html
toolkit/decision_log_template/: index.html
toolkit/fairness_audit_checklist/: index.html
toolkit/participant_survey_template/: index.html
